# ISE_Lab1

./: .gitignore  CMakeLists.txt  Dockerfile  Kostil.sh  README.md  Test  config.ini  test_file
inih/: README.md
project/: dop_func.cpp  matrix_logic.cpp  project.cpp  project.h
results/10jump/: distr_2.txt  distr_3.txt  distr_4.txt  distr_5.txt  distr_6.txt  vivod_2.txt  vivod_3.txt  vivod_4.txt  vivod_5.txt  vivod_6.txt  vivod_8.txt
results/info/: distr_2.txt  distr_3.txt  distr_4.txt  distr_5.txt  distr_6.txt  vivod_2.txt  vivod_3.txt  vivod_4.txt  vivod_5.txt  vivod_6.txt  vivod_8.txt
results/new_test/: distr_2.txt  distr_4.txt  distr_6.txt  vivod_2.txt  vivod_4.txt  vivod_6.txt
results/vvod/: distr_2.txt  distr_3.txt  distr_4.txt  distr_5.txt  distr_6.txt  vivod_2.txt  vivod_3.txt  vivod_4.txt  vivod_5.txt  vivod_6.txt  vivod_8.txt
test/: 10jump.txt  Test_for_test  Test_for_test.txt  bad_guy.txt  info.txt  last_my_text.txt  new_test.txt  new_test_2.txt  test_test.txt  vvod.txt
